# tupletools

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  gen.sh  gen2.sh  gen_append.sh  gen_cast  gen_head_tail.sh  gen_op.sh  gen_pop_back.sh  gen_pop_front.sh  gen_prepend.sh
src/: append.rs  cast.rs  fst.rs  head_tail.rs  lib.rs  pop_back.rs  pop_front.rs  prepend.rs  snd.rs  trd.rs
src/ops/: add.rs  cast.rs  div.rs  mod.rs  mul.rs  sub.rs
