[package]
name = "tupletools"
version = "0.3.0"
authors = ["Samuel Batissou <samuelbatissou@gmail.com>"]
description = "Utility functions for tuples"
license = "Apache-2.0"
edition = "2018"
keywords =["tuple", "snd", "fst", "helper"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
gitlab = {repository = "Sabati/tupletools"}
maintenance = {status = "actvely-developed"}

[profile.release]
lto = true

[features]
no_std = []

